<resources>

    <!-- Image Content Description -->
    <string name="content_description_no_internet">No internet icon</string>
    <string name="content_description_no_favorites">No favorites icon</string>
    <string name="content_description_empty_watchlist">Empty watchlist icon</string>
    <string name="content_description_backdrop_image">Backdrop image</string>
    <string name="content_description_movie_poster">movie_poster_image</string>
    <string name="content_description_youtube_trailer_image">Youtube trailer thumbnail</string>

    <!-- Placeholders -->
    <string name="placeholder_release_date">December 2017</string>
    <string name="placeholder_description">The Rock is the best damn Intercontinental Champion there ever was. The Rock is gonna lay the smackdown on your candy ass. How dare you, you little jabroni. That\'s 10 pounds of monkey crap in a 5 pound bag! I\'m gonna stick your head so far up your ass your gonna have to cut holes in your nipples to see! The Rock would wipe a monkey\'s ass with what you think. Stone Cold is the biggest piece of Texas trailer park trash walking God\'s green earth. Who is this roody-poo? Jabroni! For the millions… and millions of The Rock\'s fans…</string>
    <string name="placeholder_movie_title">Lord of the Rings</string>
    <string name="placeholder_review_author">Rashwan:</string>
    <string name="placeholder_trailer_name">trailer_name</string>
    <string name="placeholder_runtime">1 hr 45 mins</string>
    <string name="placeholder_genres">Action, Drama</string>
    <string name="placeholder_na">N/A</string>

    <!-- Menu -->
    <string name="title_menu_movies_type">Movies Type</string>
    <string name="title_menu_popular_movies">Popular Movies</string>
    <string name="title_menu_top_rated_movies">Top Rated Movies</string>
    <string name="title_menu_favorite_movies">Favorite Movies</string>
    <string name="action_menu_share">Share</string>

    <!-- TMDB Api -->
    <string name="tmdb_api_base_url">http://api.themoviedb.org/3/</string>
    <string name="tmdb_api_host_url">api.themoviedb.org</string>
    <string name="poster_base_url">http://image.tmdb.org/t/p/</string>
    <string name="trailer_youtube_thumbnail">https://img.youtube.com/vi/%s/0.jpg</string>
    <string name="trailer_youtube_video">https://www.youtube.com/watch</string>

    <!-- OMDB Api -->
    <string name="omdb_api_base_url">http://www.omdbapi.com/</string>

    <!-- VectorDrawables-->
    <string name="heart_clip_hidden">M18 37 L38 37 L38 37 L18 37 Z</string>
    <string name="heart_clip_shown">M0 0 L56 0 L56 56 L0 56 Z</string>

    <!-- Browse Movies Screen -->
    <string name="msg_no_internet">Please Check Your Internet connection</string>
    <string name="btn_refresh">Refresh</string>
    <string name="msg_no_favorites">Nothing is here! Add your favorite movies to view them offline.</string>
    <string name="msg_empty_watchlist">Nothing is here! Add movies to your watchlist to view them offline.</string>


    <!-- Movie Details Screen -->
    <string name="title_release_date">Release Date</string>
    <string name="title_vote">Vote Title</string>
    <string name="placeholder_vote_average">Vote</string>
    <string name="title_trailers">Trailers</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_similar_movies">Similar Movies</string>
    <string name="cast_character_name">As %1$s</string>

    <!-- Nearby Movies Screen -->
    <string name="msg_nearby_description">Share your favorite movies with people around you</string>
    <string name="msg_nearby_searching">Searching…</string>
    <string name="msg_nearby_no_internet">Nearby Requires an Internet Connection. Please Check Your Internet Connection</string>

    <string name="title_app_name">Popular Movies</string>
    <string name="nav_open_drawer">open drawer</string>
    <string name="nav_close_drawer">close drawer</string>
    <string name="nav_discover_title">Discover</string>
    <string name="nav_favorites_title">Favorites</string>
    <string name="nav_watchlist_title">Watchlist</string>
    <string name="toggle_watchlist_off">Add to Watchlist</string>
    <string name="toggle_watchlist_on">Remove from Watchlist</string>
    <string name="title_overview">Overview</string>
    <string name="title_awards">Awards:</string>
    <string name="title_box_office">Box Office:</string>
    <string name="title_production">Production:</string>
    <string name="msg_no_reviews">This movie has no reviews yet!</string>
    <string name="title_born_at">Born At:</string>
    <string name="title_age">Age:</string>
    <string name="title_died_at">Died At:</string>
    <string name="title_birthplace">Birthplace:</string>
    <string name="placeholder_actor_bio">No biography has been entered for this actor.</string>
    <string name="title_actor_images">Images</string>

</resources>
