<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/offline_layout"
            android:layout_gravity="center"
            android:visibility="gone">
            <TextView
                android:id="@+id/text_no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_no_internet"
                android:textSize="24sp"
                android:textColor="@color/primaryText"
                android:gravity="center"
                android:padding="16dp"
                 />
            <Button
                android:id="@+id/button_refresh"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_refresh"
                android:padding="16dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <TextView
            android:id="@+id/text_no_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/primaryText"
            android:padding="16dp"
            android:text="@string/msg_no_reviews"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_reviews"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</android.support.v4.widget.NestedScrollView>
