<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/actor_details_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/actor_details_appbar"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/actor_details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/darkBackground"
            app:statusBarScrim="@color/darkBackground"
            app:expandedTitleMarginBottom="15dp"
            app:expandedTitleMarginStart="34dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false"
            >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/actor_details_appbar_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:background="@drawable/movie_details_gradient">


                <FrameLayout
                    android:id="@+id/actor_details_main_trailer_image_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <ImageView
                        android:id="@+id/actor_details_image_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="256dp"
                        android:contentDescription="@string/content_description_backdrop_image"
                        android:focusableInTouchMode="true"
                        app:layout_collapseMode="parallax"
                        app:srcCompat="@drawable/fab_heart_fill"
                        android:visibility="invisible"
                        android:background="@color/darkBackground"
                        />

                </FrameLayout>

                <ImageView
                    android:id="@+id/actor_details_image_poster"
                    android:layout_width="128dp"
                    android:layout_height="216dp"
                    android:contentDescription="@string/content_description_movie_poster"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/actor_details_main_trailer_image_container"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="24dp"
                    app:srcCompat="@drawable/ic_watch_later"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="24dp"
                    android:elevation="8dp"
                    expandableTextView:layout_constraintVertical_bias="0.58000004" />
                <TextView
                    android:layout_width="0dp"
                    app:layout_constraintWidth_default="wrap"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_text_actor_name"
                    android:text="@string/placeholder_movie_title"
                    app:layout_constraintTop_toBottomOf="@+id/actor_details_main_trailer_image_container"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/actor_details_image_poster"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    style="@style/title_text"
                    android:textSize="24sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" 
                    />
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/actor_details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_toolbar_actor_name"
                    tools:text="@string/placeholder_movie_title"
                    style="@style/title_text"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.rashwan.reactive_popular_movies.common.utilities.ExpandableTextView
                android:id="@+id/actor_details_text_actor_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                expandableTextView:maxCollapsedLines="4"
                android:paddingBottom="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@id/expandable_text"
                    android:textColor="@color/secondaryText"
                    android:lineSpacingExtra="10dp"
                    android:textSize="16sp"
                    tools:text="@string/placeholder_description"
                    />
                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_gravity="end|bottom"
                    android:background="@android:color/transparent"/>
            </com.rashwan.reactive_popular_movies.common.utilities.ExpandableTextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/actor_details_no_bio_text"
                android:text="@string/placeholder_actor_bio"
                android:textColor="@color/secondaryText"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:visibility="gone"
                />
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_born_at"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/actor_details_born_at_title"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_text_actor_birthday"
                    android:textSize="16sp"
                    android:textColor="@color/secondaryText"
                    app:layout_constraintBaseline_toBaselineOf="@id/actor_details_born_at_title"
                    app:layout_constraintLeft_toRightOf="@id/actor_details_born_at_title"
                    tools:text="March 21, 1985"
                    android:text="@string/placeholder_na"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_age_title"
                    app:layout_constraintTop_toBottomOf="@id/actor_details_born_at_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/title_age"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_text_actor_age"
                    android:textSize="16sp"
                    android:textColor="@color/secondaryText"
                    app:layout_constraintBaseline_toBaselineOf="@id/actor_details_age_title"
                    app:layout_constraintLeft_toRightOf="@id/actor_details_age_title"
                    tools:text="55"
                    android:text="@string/placeholder_na"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_died_at"
                    android:id="@+id/actor_details_died_at_title"
                    app:layout_constraintTop_toBottomOf="@id/actor_details_age_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_text_actor_deathday"
                    android:textSize="16sp"
                    android:textColor="@color/secondaryText"
                    app:layout_constraintBaseline_toBaselineOf="@id/actor_details_died_at_title"
                    app:layout_constraintLeft_toRightOf="@id/actor_details_died_at_title"
                    tools:text="December 12, 2004"
                    android:text="@string/placeholder_na"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_birthplace_title"
                    android:text="@string/title_birthplace"
                    app:layout_constraintTop_toBottomOf="@id/actor_details_died_at_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_text_actor_birthPlace"
                    android:textSize="16sp"
                    android:textColor="@color/secondaryText"
                    app:layout_constraintBaseline_toBaselineOf="@id/actor_details_birthplace_title"
                    app:layout_constraintLeft_toRightOf="@id/actor_details_birthplace_title"
                    tools:text="Newyork, USA"
                    android:text="@string/placeholder_na"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp" />
            </android.support.constraint.ConstraintLayout>
            <View
                android:id="@+id/actor_details_divider_bio_profile_images"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/actor_details_images_title"
                android:text="@string/title_actor_images"
                style="@style/title_text"
                android:layout_marginTop="8dp"
                android:visibility="gone"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/actor_details_rv_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>