<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/actor_details_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/actor_details_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/actor_details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/darkBackground"
            app:statusBarScrim="@color/darkBackground"
            app:expandedTitleMarginBottom="15dp"
            app:expandedTitleMarginStart="34dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false"
            >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/actor_details_appbar_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:fitsSystemWindows="true"
                android:background="@drawable/movie_details_gradient">


                <FrameLayout
                    android:id="@+id/actor_details_tagged_image_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <ImageView
                        android:id="@+id/actor_details_image_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="256dp"
                        android:contentDescription="@string/content_description_backdrop_image"
                        android:focusableInTouchMode="true"
                        app:layout_collapseMode="parallax"
                        app:srcCompat="@drawable/fab_heart_fill"
                        android:visibility="invisible"
                        android:background="@color/darkBackground"
                        />

                </FrameLayout>

                <ImageView
                    android:id="@+id/actor_details_image_poster"
                    android:layout_width="128dp"
                    android:layout_height="216dp"
                    android:contentDescription="@string/content_description_movie_poster"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/actor_details_tagged_image_container"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="24dp"
                    app:srcCompat="@drawable/ic_watch_later"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="24dp"
                    android:elevation="8dp"
                    expandableTextView:layout_constraintVertical_bias="0.58000004" />
                <TextView
                    android:layout_width="0dp"
                    app:layout_constraintWidth_default="wrap"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_text_actor_name"
                    android:text="@string/placeholder_movie_title"
                    app:layout_constraintTop_toBottomOf="@+id/actor_details_tagged_image_container"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/actor_details_image_poster"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginStart="8dp"
                    style="@style/title_text"
                    android:textSize="24sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    />
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/actor_details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actor_details_toolbar_actor_name"
                    tools:text="@string/placeholder_movie_title"
                    style="@style/title_text"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
        <FrameLayout
            android:id="@+id/actor_details_tabs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TabLayout
                android:id="@+id/actor_details_sliding_tabs"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:tabMode="fixed"
                app:tabMaxWidth="0dp"
                app:tabGravity="fill"
                app:elevation="8dp"
                android:background="@color/similarBackground"
                app:tabTextColor="@android:color/darker_gray"
                app:tabSelectedTextColor="@android:color/white"
                />
        </FrameLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/actor_details_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />
</android.support.design.widget.CoordinatorLayout>